XMLExper/m12/m12_565_1_tinyxml2/comparisono.txt
tinyxml2.cpp: In member function ‘virtual bool tinyxml2::XMLPrinter::Visit(const tinyxml2::XMLUnknown&)’:
tinyxml2.cpp:3027:65: error: cannot dynamic_cast ‘unknown’ (of type ‘const class tinyxml2::XMLUnknown’) to type ‘class tinyxml2::XMLNode&’ (conversion casts away constness)
 3027 |     PushUnknown( /*PCI*/dynamic_cast<tinyxml2::XMLNode&>(unknown).Value() );
      |                                                                 ^
diff: tinyxml2.o: No such file or directory
